package com.example.aksun.testapplication;

import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;

import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
import static android.support.test.espresso.action.ViewActions.typeText;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;

@RunWith(AndroidJUnit4.class)
public class MainActivityTest {
    @Rule
    public final ActivityTestRule<MainActivity> mActivityRule =
            new ActivityTestRule<>(MainActivity.class);
    @Test
    public void testCanGreetUsers() {
        onView(withId(R.id.mainName)).perform(typeText("Hello")).perform(closeSoftKeyboard());
        onView(withId(R.id.mainGoButton)).perform(click());
        onView(withId(R.id.greetingMessage)).check(matches(withText("Hello")));
    }

    @Test
    public void testCanLol() {
        onView(withId(R.id.mainName)).perform(typeText("lol")).perform(closeSoftKeyboard());
        onView(withId(R.id.mainGoButton)).perform(click());
        onView(withId(R.id.greetingMessage)).check(matches(withText("lol")));
    }
}